   	file to by-pass when spamd-max-size is being used. Steve F.


--2.3.11--

   *	Requires Libsnert 1.73.11

   -	Removed ns-sub-domains option; was never implement. dnsListQueryNs
   	automatically handles subdomains.

   +	Added ns-a-bl option.

   +	Added run-save-core option, because I keep forgetting about
   	ulimit -c unlimited. This option takes care of the details.

--2.3.10--

   !	MANEFEST.TXT.in, src/makefile.in, config.h.in.in, smtpf.h,
	server.c, misc.c, built.c: Changed _BUILT macro from configure
	time to compile time.

   +	Added spamd-level-character option for wankers like Tulsa Connect.

--2.3.9--

   !	CACHE GET reports strangely formatted timestamp string. Fix type
	conversion bug related to 64-bit system. The cache stores times
	as 32-bits, but on a 64-bit system time_t is 64-bits. Added a
	conversion function that will first convert the unsigned 32-bit
	value into time_t before formatting the output string.

   +	Added call-ahead-as-sender option.  When set, perform the call-
	ahead using the original MAIL FROM:<sender> instead of the MAIL
	FROM:<> (null sender). Some down stream mail stores reject MAIL
	FROM:<> or reject a sender at RCPT TO:

   !	attachmentRset: fixed potential double-free error

--2.3.8--

   !	attachmentContent: changed FILTER_ATTACHMENT_CONTENT_SHORTCUT
   	test, which for long messages (>64 KB) meant that attachmentDot was
	never called.

--2.3.7--

   !	access.c: Removed use of smdbAccessIsOk that folded SMDB_ACCESS_
	codes into a limited subset. This had the adverse affect of
	folding DISARD into an OK. This is done for sendmail milters,
	but in smtpf we don't support all the sendmail action words.

--2.3.6--

   !	accessMail, accessRcpt: Combo tags never supported pattern lists
	by design; this was due in part to the question of what string
	should be tested against the pattern list (first, second, first
	and second joined). After some thought, have enhanced the design